fix training partners on tablet & mobile

--- a/static/css/training.css
+++ b/static/css/training.css
@@ -106,6 +106,10 @@ section.call-to-action .main-section .cta-image > img {
     max-width: initial;
     padding: 5vw 0 0 0;
   }
+
+  .two-thirds-centered {
+    width: 95%;
+  }
 }
 
 
@@ -170,15 +174,17 @@ h5 {
   margin-right: auto;
 }
 
+
 .landscape-section {
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
+  max-width: 1200px;
 }
 
 #landscape {
   opacity: 1;
   visibility: visible;
   overflow: hidden;
-  width: 1200px;
+  max-width: 1200px;
+  width: 100%;
 }
